--- a/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/custom/customFindly.css
@@ -222,7 +222,7 @@ img.logo-img{
     right: 0 !important;
   } */
   
-  .add-new-result{
+  .search-background-div .search-container{
     /* border-radius: 0px 6px !important; */
     width: 550px !important;
     margin: 0;
