--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -4,5 +4,5 @@
     <app-insights  [data] = "bridgeData" [query]="query" [showInsightFull] = "showInsightFull"></app-insights>
 </div> 
 <div [hidden]="addNewResult">
-    <app-add-result [addNew] = "addNewResult" (closeResult) = closeResult($event)></app-add-result>
+    <app-add-result [addNew] = "addNewResult" [query]="query" (closeResult) = closeResult($event)></app-add-result>
 </div>
