channels new layout styles updated

--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -1578,6 +1578,7 @@ and open the template in the editor.
 
 .kr-sg-input-text{
     width: 100%;
+    position: relative;
     .label-text{
         font-size: 14px;
         font-weight: bold;
