--- a/findly-builder/src/app/components/app-header/app-header.component.html
+++ b/findly-builder/src/app/components/app-header/app-header.component.html
@@ -2,11 +2,11 @@
     <nav class="findlyHeader navbar fixed-top navbar-expand-lg navbar-light white scrolling-navbar">
         <div class="container-fluid p-0">
             <div class="logoTabsContainer">
-                <img src="assets/images/Findly_logo_blackFont.svg" class="logoKoreIcon" [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange (click)="analyticsClick('apps')">
+                <img src="assets/images/Findly_logo_blackFont.svg" class="logoKoreIcon" [routerLink]="['/apps']" routerLinkActive="active" skipLocationChange (click)="analyticsClick('apps',true)">
                 <div class="myappname" *ngIf="appName"><div  container="body" ngbTooltip="{{appName}}" class="name">{{appName}}</div></div>
                 <div class="headerTabsContainer">
-                    <div class="headerMenuTab"  skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary')">Summary</div>
-                    <div class="headerMenuTab" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('/source')">
+                    <div class="headerMenuTab"  skipLocationChange routerLinkActive="active" (click)="analyticsClick('/summary',true)">Summary</div>
+                    <div class="headerMenuTab" skipLocationChange  routerLinkActive="active" (click)="analyticsClick('/source',true)">
                        <span >Indices</span>
                        <span routerLink="/content" class="d-none"></span>
                        <span routerLink="/faqs" class="d-none"></span>
@@ -48,7 +48,7 @@
                     </div>
                 </li>   
                 <div class="p-0 text-right nav-item pr-4 mr-2 trainBlock">
-                    <button class="kr-sg-button-primary btn_lg" (click)="train()">Train</button>
+                    <button class="kr-sg-button-primary btn_lg" [disabled]='training' (click)="train()">{{(training)?'Training...':'Train'}}</button>
                 </div>         
                 <li class="nav-item pr-4 mr-2">
                     <img src="assets/icons/sidemenu/notification.svg">
