--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -449,6 +449,26 @@
                   </div>
                 </div>
               </div>
+              <!-- Cookies -->
+              <div class="">
+                <div class="heading-title" style="margin-top: 1rem; margin-left: 8px;font-weight: 500;font-size: 12px;">Crawl Settings</div>
+              </div>
+            <div class="group-checkbox" style="margin-top: -1rem; float: right">
+              <!-- <div class="heading-title">Label</div> -->
+              <div class="kr-sg-checkbox">
+                  <input id="checkbox_grpg" class="checkbox-custom" type="checkbox">
+                  <label for="checkbox_grpg" class="checkbox-custom-label" style="font-weight: 500;font-size: 12px;">JavaScript-rendered</label>
+              </div>
+              <div class="kr-sg-checkbox">
+                  <input id="checkbox_grph" class="checkbox-custom" type="checkbox">
+                  <label for="checkbox_grph" class="checkbox-custom-label" style="font-weight: 500;font-size: 12px;">Use Cookies</label>
+              </div>
+              <div class="kr-sg-checkbox">
+                  <input id="checkbox_grpi" class="checkbox-custom" type="checkbox">
+                  <label for="checkbox_grpi" class="checkbox-custom-label" style="font-weight: 500;font-size: 12px;">Respect robots.txt</label>
+              </div>
+          </div>
+              <!-- Cookies -->
             </div>
 
             <div class="kr-sg-input-text-area mb-4 radio-pad"
