--- a/findly-builder/src/app/components/search-insights/search-insights.component.html
+++ b/findly-builder/src/app/components/search-insights/search-insights.component.html
@@ -6,11 +6,11 @@
             <div class="bread-name active-name">Search Insights</div>
         </div>
         <div class="d-flex justify-content-end align-items-center col-9 p-0">
-            <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span></div>                
+            <!-- <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span></div>                 -->
             <div class="date-select">
-                <span class="day time active">24 Hrs</span>
-                <span class="week time">7 Days</span>
-                <span class="custom time">Custom</span>
+                <span class="day time " [ngClass] = "{'active'  : dateType == 'hour'}" (click)="dateLimt('hour')">24 Hrs</span>
+                <span class="week time" [ngClass] = "{'active'  : dateType == 'week'}" (click)="dateLimt('week')">7 Days</span>
+                <span class="custom time" [ngClass] = "{'active'  : dateType == 'custom'}" (click)="dateLimt('custom')">Custom</span>
             </div>
             <div class="export"><img src="assets/icons/share.svg"></div>
         </div>
