--- a/findly-builder/src/app/components/insights/insights.component.scss
+++ b/findly-builder/src/app/components/insights/insights.component.scss
@@ -285,3 +285,80 @@
         padding: 70px 0;        
     }
 }
+
+//Test 
+.graph-insight{
+   
+.graphMode{
+        top: 67px;
+        z-index: 1000;
+        right:300px;
+        position: absolute;
+        background: #FFFFFF;
+        box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;
+        border: 0;
+        width: 336px;
+        top: 150px;
+        right: 172px;
+        padding: 15px 20px;
+
+        .header{        
+            .head-txt{
+                font-weight: 500;
+                font-size: 14px;
+            }
+            .closeCross{              
+                cursor: pointer;
+                float: right;                
+            }
+        }
+        .demo-chart-graphMode{
+            height: 300px !important;
+        }
+        .legends{      
+            .mr-10{
+                margin-right: 10px;
+            }     
+            .searches{
+                .head{
+                    font-weight: 500;
+                    font-size: 10px;
+                    line-height: 12px;
+                    color: #9AA0A6;                
+                }
+                .val{
+                    font-weight: 500;
+                    font-size: 14px;                
+                }
+            }
+            .clicks{
+                .head{
+                    font-weight: 500;
+                    font-size: 10px;
+                    line-height: 12px;
+                    color: #9AA0A6;                                
+                }
+                .val{
+                    font-weight: 500;
+                    font-size: 14px;                
+                    color: #3368BB;
+                }
+            }
+            .CTR{
+                .head{
+                    font-weight: 500;
+                    font-size: 10px;
+                    line-height: 12px;
+                    color: #9AA0A6;                
+                }
+                .val{
+                    font-weight: 500;
+                    font-size: 14px;                
+                    color: #009DAB;
+                }
+            }
+        }
+    }
+}
+// Test 
