--- a/findly-builder/src/app/components/result-insights/result-insights.component.html
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.html
@@ -6,42 +6,24 @@
             <div class="bread-name active-name">Results Insights</div>
         </div>
         <div class="d-flex justify-content-end align-items-center col-9 p-0">
-            <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span></div>                
+            <!-- <div class="date-info">All conversation sessions between <span class="bold-text">01-08-2020 to 07-08-2020</span></div>                 -->
             <div class="date-select">
-                <span class="day time active">24 Hrs</span>
-                <span class="week time">7 Days</span>
-                <span class="custom time">Custom</span>
+                <span class="day time " [ngClass] = "{'active'  : dateType == 'hour'}" (click)="dateLimt('hour')">24 Hrs</span>
+                <span class="week time" [ngClass] = "{'active'  : dateType == 'week'}" (click)="dateLimt('week')">7 Days</span>
+                <span class="custom time" [ngClass] = "{'active'  : dateType == 'custom'}" (click)="dateLimt('custom')">Custom</span>
             </div>
             <div class="export"><img src="assets/icons/share.svg"></div>
         </div>
     </div>
     <perfect-scrollbar class="scroll_content">             
-        <!-- <div class="data-information-content col-12 m-0 row split-tables d-none">
-            <div class="col-12 box-content">
-                <div class="full-card">                   
-                    <div class="title-card">Top Search Queries with No Clicks</div>
-                    <div class="table-content-data">
-                        <div class="table_header row m-0">
-                            <div class="col-10 header-title">Searched Intent</div>
-                            <div class="col-2 header-title text-right"><img src="assets/icons/sort_up_down.svg">Count</div>
-                        </div>
-                        <ng-container *ngIf="queriesWithNoClicks">
-                            <div class="table_body row m-0" *ngFor="let top of queriesWithNoClicks;let i = index">
-                                <div class="col-10 header-title">{{top.query}}</div>
-                                <div class="col-2 header-title text-right">{{top.count}}</div>
-                            </div>
-                        </ng-container>
-                    </div>                    
-                </div>
-            </div>
-        </div> -->
+        
         <div class="data-information-content col-12 m-0 row split-tables">
             <div class="col-12 box-content">
                 <div class="row m-0 col-12 p-0 align-items-center">                    
                     <div class="title-card col-4 p-0">Top Search Results</div>
                     <div class="col-8 d-flex justify-content-end p-0 search-filter-block">
                         <div class="kr-sg-input-search">                               
-                            <input type="text" placeholder="Search" class="input-search">
+                            <input type="text" placeholder="Search" class="input-search"  name="searchSources" [(ngModel)]="searchSources">
                             <img src="assets/icons/search_gray.svg" class="search-icon">
                         </div>
                         <div class="kr-sg-dropdowns filter-dropdown" ngbDropdown [placement]="'bottom-right'">
@@ -81,42 +63,27 @@
                         <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>Positive Feedback</span></div>
                         <div class="col-2 title d-flex"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>Negative Feedback</span></div>
                     </div>
-                    <div class="table_body row m-0">
+                    <div class="table_body row m-0" *ngFor="let result of resultsData | filter: [ searchSources , 'answer']">
                         <div class="col-3 title d-flex align-items-center">
-                            <span class="img-sec"><img src="assets/icons/question-box.svg"></span>
-                            <span class="results">Access Account Details Online</span>
+                            <span class="img-sec"><img src="assets/icons/question-box.svg" *ngIf="result.answerType =='faq'"></span>
+                            <span class="img-sec"><img src="assets/icons/sidemenu/new-icons/page.svg" *ngIf="result.answerType =='page'"></span>
+                            <span class="img-sec"><img src="assets/icons/sidemenu/new-icons/actions.svg" *ngIf="result.answerType =='task'"></span>
+                            <span class="results">{{result.answer}}</span>
                         </div>
-                        <div class="col-1 title">1249</div>
-                        <div class="col-1 title">1000</div>
-                        <div class="col-2 title">90%</div>
-                        <div class="col-1 title">2.8</div>
-                        <div class="col-2 title">4736</div>                       
+                        <div class="col-1 title">{{result.appearances}}</div>
+                        <div class="col-1 title">{{result.clicks}}</div>
+                        <div class="col-2 title">{{result.clickThroughRate}}%</div>
+                        <div class="col-1 title">{{result.avgPosition}}</div>
+                        <div class="col-2 title">{{result.positiveFeedback}}</div>                       
                         <div class="col-2 title">
-                            <span class="count">4837</span>
-                            <div class="view-query" (click)="openModalPopup()">
+                            <span class="count">{{result.negativeFeedback}}</span>
+                            <div class="view-query" (click)="openModalPopup(result)">
                                 <img src="assets/icons/view-query.svg">    
                                 <span>View Queries</span>                           
                             </div>
                         </div>
                     </div>    
-                    <div class="table_body row m-0">
-                        <div class="col-3 title d-flex align-items-center">
-                            <span class="img-sec"><img src="assets/icons/question-box.svg"></span>
-                            <span class="results">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
-                        </div>
-                        <div class="col-1 title">1249</div>
-                        <div class="col-1 title">1000</div>
-                        <div class="col-2 title">90%</div>
-                        <div class="col-1 title">2.8</div>
-                        <div class="col-2 title">4736</div>                       
-                        <div class="col-2 title">
-                            <span class="count">4837</span>
-                            <div class="view-query" (click)="openModalPopup()">
-                                <img src="assets/icons/view-query.svg">    
-                                <span>View Queries</span>                           
-                            </div>
-                        </div>
-                    </div>                                       
+                    
                 </div>
             </div>
         </div>
@@ -128,8 +95,8 @@
   <div class="modal-header">
     <div>
         <div class="small-title">Search Queries for</div>
-        <div class="title-small">Access my account online at Citibank Online</div>
-        <div class="response">FAQ Response</div>
+        <div class="title-small">{{resultQueryAnswer}}</div>
+        <div class="response">{{searchQueryanswerType}} Response</div>
     </div>
     <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
   </div>
@@ -145,35 +112,24 @@
                 <div class="col-1 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>Positive Feedback</span></div>
                 <div class="col-1 title d-flex align-items-start"><img src="assets/icons/sort_up_down.svg" class="mr-1"><span>Negative Feedback</span></div>
             </div>
-            <div class="table_body row m-0">
+            <div class="table_body row m-0" *ngFor="let result of resultsSearchData">
                 <div class="col-2 title d-flex align-items-center">
-                    <span class="img-sec"><img src="assets/icons/question-box.svg"></span>
-                    <span class="results">Access Account Details Online</span>
+                    <!-- <span class="img-sec"><img src="assets/icons/question-box.svg"></span> -->
+                    <span class="results">{{result.query}}</span>
                 </div>
-                <div class="col-2 title">1249</div>
-                <div class="col-2 title">1000</div>
-                <div class="col-2 title">90%</div>
-                <div class="col-2 title">2.8</div>
-                <div class="col-1 title">4736</div>                       
-                <div class="col-1 title">4837</div>
+                <div class="col-2 title">{{result.appearances}}</div>
+                <div class="col-2 title">{{result.clicks}}</div>
+                <div class="col-2 title">{{result.clickThroughRate}}%</div>
+                <div class="col-2 title">{{result.avgPosition}}</div>
+                <div class="col-1 title">{{result.positiveFeedback}}</div>                       
+                <div class="col-1 title">{{result.negativeFeedback}}</div>
             </div>       
-            <div class="table_body row m-0">
-                <div class="col-2 title d-flex align-items-center">
-                    <span class="img-sec"><img src="assets/icons/question-box.svg"></span>
-                    <span class="results">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</span>
-                </div>
-                <div class="col-2 title">1249</div>
-                <div class="col-2 title">1000</div>
-                <div class="col-2 title">90%</div>
-                <div class="col-2 title">2.8</div>
-                <div class="col-1 title">4736</div>                       
-                <div class="col-1 title">4837</div>
-            </div>                                       
+            
         </div>
     </div>
   </perfect-scrollbar>
-  <div class="modal-footer">
+  <!-- <div class="modal-footer">
       <button class="kr-sg-button-primary btn_lg">Proceed</button>
       <button class="kr-sg-button-secondary btn_lg">Back</button>
-  </div>
+  </div> -->
 </kr-modal> 
