--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -202,7 +202,7 @@
                 cursor: pointer;
             } 
             .img-sec{
-                margin-right: 25px;
+                margin-right: 10px//25px;
             }
         }                    
     }
