--- a/findly-builder/src/app/components/synonyms/synonyms.component.html
+++ b/findly-builder/src/app/components/synonyms/synonyms.component.html
@@ -71,13 +71,13 @@
             <header class="table-header" >
                 <div class="col-8 title-header"><img src="assets/icons/sort_up_down.svg">{{'synonyms.terms'| translate}}</div>
                 <div class="col-4 title-header"><img src="assets/icons/sort_up_down.svg">{{'synonyms.type'| translate}}
-                  <span class="kr-sg-dropdowns" ngbDropdown [placement]="'bottom-center'">                                        
+                  <span class="kr-sg-dropdowns" #t='ngbDropdown' ngbDropdown [placement]="'bottom-center'">                                        
                     <div class="dropdown dropdown-open">
                       <img src="assets/icons/synonyms_sort_dropdown.svg" ngbDropdownToggle>                                            
                       <ul class="dropdown-menu content-menu synonyms_sort_dropdown" ngbDropdownMenu>
-                        <li (click)="selectFilter(null)">{{'synonyms.all'| translate}}<img *ngIf="!(selectedFilter)" class="pl-2" src="assets/icons/check-blue.svg"></li>
-                       <li (click)="selectFilter('oneWaySynonym')">{{'synonyms.one_way_synonym' | translate}}<img class="pl-2" *ngIf="(selectedFilter === 'oneWaySynonym')" src="assets/icons/check-blue.svg"></li>
-                       <li (click)="selectFilter('synonym')">{{'synonyms.synonym'| translate}}<img class="pl-2" *ngIf="(selectedFilter === 'synonym')" src="assets/icons/check-blue.svg"></li>		
+                        <li (click)="selectFilter(null);t.close();">{{'synonyms.All' | translate}}<img *ngIf="!(selectedFilter)" class="pl-2" src="assets/icons/check-blue.svg"></li>
+                       <li (click)="selectFilter('oneWaySynonym');t.close();">{{'synonyms.one_way_synonym' | translate}}<img class="pl-2" *ngIf="(selectedFilter === 'oneWaySynonym')" src="assets/icons/check-blue.svg"></li>
+                       <li (click)="selectFilter('synonym');t.close();">{{'synonyms.synonym'| translate}}<img class="pl-2" *ngIf="(selectedFilter === 'synonym')" src="assets/icons/check-blue.svg"></li>		
                       </ul>
                     </div>
                   </span>
