--- a/findly-builder/src/app/components/insights/insights.component.html
+++ b/findly-builder/src/app/components/insights/insights.component.html
@@ -162,7 +162,7 @@
                 </div>
                 <div>
                     <div class="head">searches</div>
-                    <div class="val">2685</div>
+                    <div class="val">{{analystic.searches}}</div>
                 </div>
             </div>
             <div class="clicks col-lg-4 p-0 d-flex align-items-center">
@@ -171,7 +171,7 @@
                 </div>
                 <div>
                     <div class="head">Clicks</div>
-                    <div class="val">1268</div>
+                    <div class="val">{{analystic.clicks}}</div>
                 </div>
             </div>
             <div class="CTR col-lg-4 p-0 d-flex align-items-center">
@@ -180,7 +180,7 @@
                 </div>
                 <div>
                     <div class="head">CTR</div>
-                    <div class="val">67%</div>
+                    <div class="val">{{ctrVal}}%</div>
                 </div>
             </div>
         </div>                   
